--- a/index.html
+++ b/index.html
@@ -1,34 +1,33 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <title>عيد ميلاد دينا</title>
     <style>
-        body {{
+        body {
             font-family: 'Arial', sans-serif;
             background-color: #fcefee;
             color: #333;
             text-align: center;
             padding: 30px;
-        }}
-        .card {{
+        }
+        .card {
             background: #fff;
             border-radius: 15px;
             padding: 25px;
             max-width: 600px;
             margin: auto;
             box-shadow: 0 0 15px rgba(0,0,0,0.1);
-        }}
-        img {{
+        }
+        img {
             width: 100%;
             border-radius: 15px;
             margin-bottom: 20px;
-        }}
-        iframe {{
+        }
+        iframe {
             border-radius: 10px;
             margin-top: 20px;
-        }}
+        }
     </style>
 </head>
 <body>
@@ -56,8 +55,8 @@
 نبيها بداية جديدة…
 نضحكوا، نعيشوا، ونحبوا بعض أكثر من قبل،
 بلا زعل، بلا وجع، بلا مسافة توقف بينا.
-
-نحبك يا دينا ❤️
+            
+            نحبك دندوني ❤️
         </p>
         <iframe width="100%" height="315" src="https://www.youtube.com/embed/wNut8QshEx0?autoplay=1&loop=1&playlist=wNut8QshEx0" 
                 title="Happy Birthday Song" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
