--- a/index.html
+++ b/index.html
@@ -2,39 +2,105 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>عيد ميلاد دينا</title>
+    <title>كل سنة وانتِ الحياة ❤️</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #fcefee;
+            background: linear-gradient(135deg, #ffe4ec, #ffd6e8);
             color: #333;
             text-align: center;
             padding: 30px;
+            overflow: hidden;
         }
         .card {
             background: #fff;
-            border-radius: 15px;
+            border-radius: 20px;
             padding: 25px;
-            max-width: 600px;
+            max-width: 650px;
             margin: auto;
-            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+            box-shadow: 0 0 20px rgba(255, 105, 180, 0.3);
+            position: relative;
+            z-index: 2;
         }
         img {
             width: 100%;
             border-radius: 15px;
             margin-bottom: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
         }
-        iframe {
-            border-radius: 10px;
+        h2 {
+            font-size: 28px;
+            color: #d63384;
+            animation: pulse 2s infinite;
+        }
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+        }
+        p {
+            white-space: pre-wrap;
+            font-size: 18px;
+            line-height: 1.7;
+        }
+        audio {
             margin-top: 20px;
+        }
+        /* تأثير القلوب */
+        .heart {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background: red;
+            transform: rotate(45deg);
+            animation: float 6s linear infinite;
+            opacity: 0.6;
+        }
+        .heart::before, .heart::after {
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background: red;
+            border-radius: 50%;
+        }
+        .heart::before {
+            top: -10px;
+            left: 0;
+        }
+        .heart::after {
+            left: -10px;
+            top: 0;
+        }
+        @keyframes float {
+            0% {
+                bottom: -20px;
+                opacity: 0.6;
+            }
+            100% {
+                bottom: 100%;
+                left: calc(100% * var(--x));
+                opacity: 0;
+            }
         }
     </style>
 </head>
 <body>
+    <!-- تأثير القلوب -->
+    <script>
+        for (let i = 0; i < 20; i++) {
+            let heart = document.createElement("div");
+            heart.className = "heart";
+            heart.style.left = Math.random() * 100 + "vw";
+            heart.style.animationDuration = (Math.random() * 3 + 3) + "s";
+            heart.style.setProperty('--x', Math.random());
+            document.body.appendChild(heart);
+        }
+    </script>
+
     <div class="card">
-        <img src="dina-photo.jpg" alt="صورة دينا">
-        <h2>عيد ميلاد سعيد يا دينا 🎉</h2>
-        <p style="white-space: pre-wrap; font-size: 18px;">
+        <img src="IMG_20231231_034358_536.jpg" alt="دينا">
+        <h2>كل سنة وانتِ الحياة ❤️</h2>
+        <p>
 ضيّ عيوني دينا،
 
 كل سنة وإنتِ بألف خير،
@@ -55,11 +121,15 @@
 نبيها بداية جديدة…
 نضحكوا، نعيشوا، ونحبوا بعض أكثر من قبل،
 بلا زعل، بلا وجع، بلا مسافة توقف بينا.
-            
-            نحبك دندوني ❤️
+
+نحبك دندوني ❤️
         </p>
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/wNut8QshEx0?autoplay=1&loop=1&playlist=wNut8QshEx0" 
-                title="Happy Birthday Song" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+        <!-- الصوت -->
+        <audio controls autoplay loop>
+            <source src="dina_song.mp3" type="audio/mpeg">
+            المتصفح لا يدعم الصوت.
+        </audio>
     </div>
 </body>
 </html>
