--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         }
         audio {
             margin-top: 20px;
+            width: 100%;
         }
-        /* تأثير القلوب */
         .heart {
             position: absolute;
             width: 20px;
@@ -114,7 +114,7 @@
 
 نعرف إني ما كنتش قدّ اللحظة، وغلطت،
 بس الغلطة مش معنى إنها تقلل من اللي بينّا…
-ولا معنى إنّي نستهون بيك، لا دينا.
+ولا معنى إنّي نستهون بيك، لا يا دينا.
 
 اللي صار خلاني نشوف، إنك أغلى من أي وقت، وأهم من أي شي.
 
@@ -122,13 +122,13 @@
 نضحكوا، نعيشوا، ونحبوا بعض أكثر من قبل،
 بلا زعل، بلا وجع، بلا مسافة توقف بينا.
 
-            نحبك دندوني ❤️
+نحبك دندوني ❤️
         </p>
 
         <!-- الصوت -->
         <audio controls autoplay loop>
-            <source src="dina_song.mp3" type="audio/mpeg">
-            المتصفح لا يدعم الصوت.
+            <source src="Mahmoud El Esseily - Kol Sana _ Wadi Degla - محمود العسيلي- كل سنة _ وادي دجلة - رمضان 2025(MP3_160K).mp3" type="audio/mpeg">
+            المتصفح لا يدعم تشغيل هذا الملف الصوتي.
         </audio>
     </div>
 </body>
