--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>كل سنة وانتِ الحياة ❤️</title>
     <style>
         body {
@@ -9,72 +10,88 @@
             background: linear-gradient(135deg, #ffe4ec, #ffd6e8);
             color: #333;
             text-align: center;
-            padding: 30px;
-            overflow: hidden;
+            padding: 20px;
+            margin: 0;
         }
+
         .card {
             background: #fff;
             border-radius: 20px;
-            padding: 25px;
-            max-width: 650px;
+            padding: 20px;
+            max-width: 400px;
             margin: auto;
-            box-shadow: 0 0 20px rgba(255, 105, 180, 0.3);
+            box-shadow: 0 0 15px rgba(255, 105, 180, 0.3);
             position: relative;
             z-index: 2;
         }
+
         img {
-            width: 100%;
+            width: 85%;
+            height: auto;
             border-radius: 15px;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
             box-shadow: 0 0 10px rgba(0,0,0,0.2);
         }
+
         h2 {
-            font-size: 28px;
+            font-size: 22px;
             color: #d63384;
             animation: pulse 2s infinite;
+            margin-bottom: 15px;
         }
+
         @keyframes pulse {
             0%, 100% { transform: scale(1); }
             50% { transform: scale(1.05); }
         }
+
         p {
             white-space: pre-wrap;
-            font-size: 18px;
-            line-height: 1.7;
+            font-size: 16px;
+            line-height: 1.8;
+            padding: 0 10px;
         }
+
         audio {
             margin-top: 20px;
             width: 100%;
         }
+
+        /* تأثير القلوب */
         .heart {
             position: absolute;
-            width: 20px;
-            height: 20px;
+            width: 16px;
+            height: 16px;
             background: red;
             transform: rotate(45deg);
             animation: float 6s linear infinite;
-            opacity: 0.6;
+            opacity: 0.5;
         }
-        .heart::before, .heart::after {
+
+        .heart::before,
+        .heart::after {
             content: '';
             position: absolute;
-            width: 20px;
-            height: 20px;
+            width: 16px;
+            height: 16px;
             background: red;
             border-radius: 50%;
         }
+
         .heart::before {
-            top: -10px;
+            top: -8px;
             left: 0;
         }
+
         .heart::after {
-            left: -10px;
+            left: -8px;
             top: 0;
         }
+
         @keyframes float {
             0% {
                 bottom: -20px;
-                opacity: 0.6;
+                opacity: 0.5;
             }
             100% {
                 bottom: 100%;
@@ -85,6 +102,7 @@
     </style>
 </head>
 <body>
+
     <!-- تأثير القلوب -->
     <script>
         for (let i = 0; i < 20; i++) {
@@ -97,6 +115,7 @@
         }
     </script>
 
+    <!-- بطاقة المعايدة -->
     <div class="card">
         <img src="IMG_20231231_034358_536.jpg" alt="دينا">
         <h2>كل سنة وانتِ الحياة ❤️</h2>
@@ -127,9 +146,10 @@
 
         <!-- الصوت -->
         <audio controls autoplay loop>
-            <source src="Mahmoud El Esseily - Kol Sana _ Wadi Degla - محمود العسيلي- كل سنة _ وادي دجلة - رمضان 2025(MP3_160K).mp3" type="audio/mpeg">
+            <source src="dina.mp3" type="audio/mpeg">
             المتصفح لا يدعم تشغيل هذا الملف الصوتي.
         </audio>
     </div>
+
 </body>
 </html>
