--- a/index.html
+++ b/index.html
@@ -2,42 +2,41 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>كل سنة وانتِ الحياة ❤️</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #ffe4ec, #ffd6e8);
+            background: linear-gradient(135deg, #ffccdd, #ffe6f0);
             color: #333;
             text-align: center;
             padding: 20px;
-            margin: 0;
+            overflow-x: hidden;
         }
 
         .card {
             background: #fff;
             border-radius: 20px;
             padding: 20px;
-            max-width: 400px;
+            max-width: 95%;
             margin: auto;
-            box-shadow: 0 0 15px rgba(255, 105, 180, 0.3);
+            box-shadow: 0 0 25px rgba(255, 105, 180, 0.4);
             position: relative;
             z-index: 2;
         }
 
         img {
-            width: 85%;
-            height: auto;
+            width: 100%;
+            max-width: 350px;
             border-radius: 15px;
-            margin-bottom: 15px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            margin-bottom: 20px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
 
         h2 {
-            font-size: 22px;
-            color: #d63384;
+            font-size: 26px;
+            color: #e91e63;
             animation: pulse 2s infinite;
-            margin-bottom: 15px;
         }
 
         @keyframes pulse {
@@ -47,56 +46,71 @@
 
         p {
             white-space: pre-wrap;
-            font-size: 16px;
+            font-size: 18px;
             line-height: 1.8;
-            padding: 0 10px;
+            color: #444;
+            margin-bottom: 25px;
         }
 
         audio {
-            margin-top: 20px;
             width: 100%;
+            max-width: 350px;
+            margin: 15px auto;
         }
 
         /* تأثير القلوب */
         .heart {
             position: absolute;
-            width: 16px;
-            height: 16px;
+            width: 20px;
+            height: 20px;
             background: red;
             transform: rotate(45deg);
             animation: float 6s linear infinite;
-            opacity: 0.5;
+            opacity: 0.6;
         }
 
-        .heart::before,
-        .heart::after {
+        .heart::before, .heart::after {
             content: '';
             position: absolute;
-            width: 16px;
-            height: 16px;
+            width: 20px;
+            height: 20px;
             background: red;
             border-radius: 50%;
         }
 
         .heart::before {
-            top: -8px;
+            top: -10px;
             left: 0;
         }
 
         .heart::after {
-            left: -8px;
+            left: -10px;
             top: 0;
         }
 
         @keyframes float {
             0% {
                 bottom: -20px;
-                opacity: 0.5;
+                opacity: 0.6;
             }
             100% {
                 bottom: 100%;
                 left: calc(100% * var(--x));
                 opacity: 0;
+            }
+        }
+
+        @media (max-width: 600px) {
+            h2 {
+                font-size: 22px;
+            }
+
+            p {
+                font-size: 16px;
+            }
+
+            .card {
+                padding: 15px;
             }
         }
     </style>
@@ -105,7 +119,7 @@
 
     <!-- تأثير القلوب -->
     <script>
-        for (let i = 0; i < 20; i++) {
+        for (let i = 0; i < 25; i++) {
             let heart = document.createElement("div");
             heart.className = "heart";
             heart.style.left = Math.random() * 100 + "vw";
@@ -115,7 +129,6 @@
         }
     </script>
 
-    <!-- بطاقة المعايدة -->
     <div class="card">
         <img src="IMG_20231231_034358_536.jpg" alt="دينا">
         <h2>كل سنة وانتِ الحياة ❤️</h2>
@@ -132,8 +145,7 @@
 واللي كلّ يوم نشكر على وجودها، حتى من بعيد، حتى فـ العناد، حتى فـ الزعل.
 
 نعرف إني ما كنتش قدّ اللحظة، وغلطت،
-بس الغلطة مش معنى إنها تقلل من اللي بينّا…
-ولا معنى إنّي نستهون بيك، لا يا دينا.
+بس الغلطة مش معناها إني نستهون بيك، لا يا دينا.
 
 اللي صار خلاني نشوف، إنك أغلى من أي وقت، وأهم من أي شي.
 
@@ -141,12 +153,13 @@
 نضحكوا، نعيشوا، ونحبوا بعض أكثر من قبل،
 بلا زعل، بلا وجع، بلا مسافة توقف بينا.
 
+حبيت نهديك الاغنية هادي اللي كل كلمة فيها تعبر عن شعوري توا ♥️  
 نحبك دندوني ❤️
         </p>
 
         <!-- الصوت -->
-        <audio controls autoplay loop>
-            <source src="dina.mp3" type="audio/mpeg">
+        <audio controls>
+            <source src="Mahmoud El Esseily - Kol Sana _ Wadi Degla - محمود العسيلي- كل سنة _ وادي دجلة - رمضان 2025(MP3_160K).mp3" type="audio/mpeg">
             المتصفح لا يدعم تشغيل هذا الملف الصوتي.
         </audio>
     </div>
