--- a/index.html
+++ b/index.html
@@ -2,41 +2,42 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>كل سنة وانتِ الحياة ❤️</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>كل سنة وانتِ الحياة ❤️</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #ffccdd, #ffe6f0);
+            background: linear-gradient(135deg, #ffe4ec, #ffd6e8);
             color: #333;
             text-align: center;
             padding: 20px;
-            overflow-x: hidden;
+            margin: 0;
         }
 
         .card {
             background: #fff;
             border-radius: 20px;
             padding: 20px;
-            max-width: 95%;
+            max-width: 400px;
             margin: auto;
-            box-shadow: 0 0 25px rgba(255, 105, 180, 0.4);
+            box-shadow: 0 0 15px rgba(255, 105, 180, 0.3);
             position: relative;
             z-index: 2;
         }
 
         img {
-            width: 100%;
-            max-width: 350px;
+            width: 85%;
+            height: auto;
             border-radius: 15px;
-            margin-bottom: 20px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            margin-bottom: 15px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
         }
 
         h2 {
-            font-size: 26px;
-            color: #e91e63;
+            font-size: 22px;
+            color: #d63384;
             animation: pulse 2s infinite;
+            margin-bottom: 15px;
         }
 
         @keyframes pulse {
@@ -46,71 +47,56 @@
 
         p {
             white-space: pre-wrap;
-            font-size: 18px;
+            font-size: 16px;
             line-height: 1.8;
-            color: #444;
-            margin-bottom: 25px;
+            padding: 0 10px;
         }
 
         audio {
+            margin-top: 20px;
             width: 100%;
-            max-width: 350px;
-            margin: 15px auto;
         }
 
         /* تأثير القلوب */
         .heart {
             position: absolute;
-            width: 20px;
-            height: 20px;
+            width: 16px;
+            height: 16px;
             background: red;
             transform: rotate(45deg);
             animation: float 6s linear infinite;
-            opacity: 0.6;
+            opacity: 0.5;
         }
 
-        .heart::before, .heart::after {
+        .heart::before,
+        .heart::after {
             content: '';
             position: absolute;
-            width: 20px;
-            height: 20px;
+            width: 16px;
+            height: 16px;
             background: red;
             border-radius: 50%;
         }
 
         .heart::before {
-            top: -10px;
+            top: -8px;
             left: 0;
         }
 
         .heart::after {
-            left: -10px;
+            left: -8px;
             top: 0;
         }
 
         @keyframes float {
             0% {
                 bottom: -20px;
-                opacity: 0.6;
+                opacity: 0.5;
             }
             100% {
                 bottom: 100%;
                 left: calc(100% * var(--x));
                 opacity: 0;
-            }
-        }
-
-        @media (max-width: 600px) {
-            h2 {
-                font-size: 22px;
-            }
-
-            p {
-                font-size: 16px;
-            }
-
-            .card {
-                padding: 15px;
             }
         }
     </style>
@@ -119,7 +105,7 @@
 
     <!-- تأثير القلوب -->
     <script>
-        for (let i = 0; i < 25; i++) {
+        for (let i = 0; i < 20; i++) {
             let heart = document.createElement("div");
             heart.className = "heart";
             heart.style.left = Math.random() * 100 + "vw";
@@ -129,6 +115,7 @@
         }
     </script>
 
+    <!-- بطاقة المعايدة -->
     <div class="card">
         <img src="IMG_20231231_034358_536.jpg" alt="دينا">
         <h2>كل سنة وانتِ الحياة ❤️</h2>
@@ -139,27 +126,27 @@
 كل سنة وإنتِ البهجة اللي تعمّر قلبي، والضحكة اللي نعيش عليها.
 
 يوم ميلادك مش يوم عادي،
-هو اليوم اللي الدنيا زادت فيه شخص، كان قدري، وراحتي، وحياتي.
+هو اليوم اللي الدنيا زادت فيه شخص، كان حبي، وراحتي، وحياتي.
 
 إنتِ النعمة اللي ربي رزقني بيها…
-واللي كلّ يوم نشكر على وجودها، حتى من بعيد، حتى فـ العناد، حتى فـ الزعل.
+واللي كلّ يوم نشكره على وجودها، حتى من بعيد، حتى فـ الفراق، حتى فـ الزعل.
 
 نعرف إني ما كنتش قدّ اللحظة، وغلطت،
-بس الغلطة مش معناها إني نستهون بيك، لا يا دينا.
+بس الغلطة مش معنى إنها تقلل من اللي بينّا…
+ولا معنى إنّي نستهون بيك، لا يا دينا.
 
 اللي صار خلاني نشوف، إنك أغلى من أي وقت، وأهم من أي شي.
 
 نبيها بداية جديدة…
 نضحكوا، نعيشوا، ونحبوا بعض أكثر من قبل،
 بلا زعل، بلا وجع، بلا مسافة توقف بينا.
-
-حبيت نهديك الاغنية هادي اللي كل كلمة فيها تعبر عن شعوري توا ♥️  
+حبيت نهديك الاغنية هادي اللي كل كلمة فيها تعبر عن شعوري توا ♥️ 
 نحبك دندوني ❤️
         </p>
 
         <!-- الصوت -->
-        <audio controls>
-            <source src="Mahmoud El Esseily - Kol Sana _ Wadi Degla - محمود العسيلي- كل سنة _ وادي دجلة - رمضان 2025(MP3_160K).mp3" type="audio/mpeg">
+        <audio controls autoplay loop>
+            <source src="dina.mp3" type="audio/mpeg">
             المتصفح لا يدعم تشغيل هذا الملف الصوتي.
         </audio>
     </div>
